--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
 
             <div class="project">
-                <div><a href="http://foxhuntd.github.io/simulation/simulation.html"><img src="bunny.gif"/></a></div>
-                <div class='title'><a href="http://foxhuntd.github.io/simulation/simulation.html">Volumetric Fluid Simulation</a></div>
+                <div><a href="https://foxhuntd.github.io/simulation/simulation.html"><img src="bunny.gif"/></a></div>
+                <div class='title'><a href="https://foxhuntd.github.io/simulation/simulation.html">Volumetric Fluid Simulation</a></div>
             </div>
             <div class="project">
                 <div><a href="https://foxhuntd.github.io/raymarchCube.html"><img src="fireball.gif" /></a></div>
