--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
                 <div><a href="https://foxhuntd.github.io/raymarchCube.html"><img src="fireball.gif" /></a></div>
                 <div class='title'><a href="https://foxhuntd.github.io/raymarchCube.html">Curl Noise Fireball</a></div>
             </div>
+            <div class="project">
+                <div><a href="http://moyu-photo.chinacloudapp.cn/room/qy/orange.html"><img src="orange.png" /></a></div>
+                <div class='title'><a href="http://moyu-photo.chinacloudapp.cn/room/qy/orange.html">Realistic Scan Model Orange</a></div>
+            </div>
+            <div class="project">
+                <div><a href="http://moyu-photo.chinacloudapp.cn/room/qy/hulu.html"><img src="sculpture.png" /></a></div>
+                <div class='title'><a href="http://moyu-photo.chinacloudapp.cn/room/qy/hulu.html">Realistic Scan Model Sculpture</a></div>
+            </div>
         </div>
 
         <div style="clear: both;"></div>
