--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class='title'><a href="http://moyu-photo.chinacloudapp.cn/room/qy/orange.html">Realistic Scan Model Orange</a></div>
             </div>
             <div class="project">
-                <div><a href="http://moyu-photo.chinacloudapp.cn/room/qy/hulu.html"><img src="sculpture.png" /></a></div>
+                <div><a href="http://moyu-photo.chinacloudapp.cn/room/qy/hulu.html"><img src="hulu.png" /></a></div>
                 <div class='title'><a href="http://moyu-photo.chinacloudapp.cn/room/qy/hulu.html">Realistic Scan Model Sculpture</a></div>
             </div>
         </div>
