--- a/index.html
+++ b/index.html
@@ -82,6 +82,30 @@
                 <div><a href="http://moyu-photo.chinacloudapp.cn/room/qy/hulu.html"><img src="hulu.png" /></a></div>
                 <div class='title'><a href="http://moyu-photo.chinacloudapp.cn/room/qy/hulu.html">Realistic Scan Model Sculpture</a></div>
             </div>
+            <div class="project">
+                <div><a href="realisticOcean.png"><img src="realisticOcean.png" /></a></div>
+                <div class='title'><a href="realisticOcean.png">Realistic Ocean In UE4</a></div>
+            </div>
+            <div class="project">
+                <div><a href="stylizedOcean.png"><img src="stylizedOcean.png" /></a></div>
+                <div class='title'><a href="stylizedOcean.png">Stylized Ocean Ocean In UE4</a></div>
+            </div>
+            <div class="project">
+                <div><a href="realisticRendering.png"><img src="realisticRendering.png" /></a></div>
+                <div class='title'><a href="realisticRendering.png">Photorealistic Scene In UE4</a></div>
+            </div>
+            <div class="project">
+                <div><a href="realisticCar.png"><img src="realisticCar.png" /></a></div>
+                <div class='title'><a href="realisticCar.png">High Quality Soft Shadow</a></div>
+            </div>
+            <div class="project">
+                <div><a href="curlNoiseadvec.png"><img src="curlNoiseadvec.png" /></a></div>
+                <div class='title'><a href="curlNoiseadvec.png">High Quality Soft Shadow</a></div>
+            </div>
+            <div class="project">
+                <div><a href="styleTransfer.png"><img src="styleTransfer.png" /></a></div>
+                <div class='title'><a href="styleTransfer.png">Stylit</a></div>
+            </div>
         </div>
 
         <div style="clear: both;"></div>
