--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </div>
             <div class="project">
                 <div><a href="curlNoiseadvec.png"><img src="curlNoiseadvec.png" /></a></div>
-                <div class='title'><a href="curlNoiseadvec.png">High Quality Soft Shadow</a></div>
+                <div class='title'><a href="curlNoiseadvec.png">Curl Noise Advection</a></div>
             </div>
             <div class="project">
                 <div><a href="styleTransfer.png"><img src="styleTransfer.png" /></a></div>
