--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                 <div class='title'><a href="realisticCar.png">High Quality Soft Shadow</a></div>
             </div>
             <div class="project">
-                <div><a href="curlNoiseadvec.png"><img src="curlNoiseadvec.png" /></a></div>
-                <div class='title'><a href="curlNoiseadvec.png">Curl Noise Advection</a></div>
+                <div><a href="curlAdvect.gif"><img src="curlNoiseadvec.png" /></a></div>
+                <div class='title'><a href="curlAdvect.gif">Curl Noise Advection</a></div>
             </div>
             <div class="project">
                 <div><a href="styleTransfer.png"><img src="styleTransfer.png" /></a></div>
