--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div style="clear: both;"></div>
 
         <div id="contact">
-            Email: <a href="tang.shengchao@hotmail.com">tang.shengchao@hotmail.com</a> | 知乎专栏: <a href="https://zhuanlan.zhihu.com/c_37032701">Math Eye Candy | QQ: 277941451</a> 
+            Email: <a href="tang.shengchao@hotmail.com">tang.shengchao@hotmail.com</a> | 知乎专栏: <a href="https://zhuanlan.zhihu.com/c_37032701">Math Eye Candy</a> | QQ: 277941451 
         </div>
 
         <script>
