--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="project">
                 <div><a href="stylizedOcean.png"><img src="stylizedOcean.png" /></a></div>
-                <div class='title'><a href="stylizedOcean.png">Stylized Ocean Ocean In UE4</a></div>
+                <div class='title'><a href="stylizedOcean.png">Stylized Ocean In UE4</a></div>
             </div>
             <div class="project">
                 <div><a href="realisticRendering.png"><img src="realisticRendering.png" /></a></div>
