--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class='title'><a href="https://foxhuntd.github.io/raymarchCube.html">Curl Noise Fireball</a></div>
             </div>
             <div class="project">
-                <div><a href="https://foxhuntd.github.io/mview/testfox.html"><img src="hulu.png" /></a></div>
+                <div><a href="https://foxhuntd.github.io/mview/testfox.html"><img src="renderer.png" /></a></div>
                 <div class='title'><a href="https://foxhuntd.github.io/mview/testfox.html">Webgl Renderer</a></div>
             </div>
             <div class="project">
