--- a/mview/testfox.html
+++ b/mview/testfox.html
@@ -26,7 +26,7 @@
                 onLoaded();
             }
         });
-
+        alert("mobile");
         function onLoaded() {
             marmoset.texts = texts;
             marmoset.images = images;
