--- a/littleworkshop.html
+++ b/littleworkshop.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html LANG="" dir="">
   <head>
-    <meta charset="utf-8">
+    <meta charset="gb2312">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, minimal-ui=1">
 
