--- a/littleworkshop.html
+++ b/littleworkshop.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html LANG="" dir="">
+<html>
   <head>
-    <meta charset="gb2312">
+    <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, minimal-ui=1">
 
@@ -21,20 +21,20 @@
       <div class="instructions look" data-ref="look_instructions">
         <div class="inner">
           <div class="hand"></div>
-          <div class="copy">°´×¡Êó±êÍÏ×§ÒÆ¶¯ÊÓ½Ç</div>
+          <div class="copy">æŒ‰ä½é¼ æ ‡æ‹–æ‹½ç§»åŠ¨è§†è§’</div>
         </div>
       </div>
 
       <div class="instructions material" data-ref="material_instructions">
         <div class="inner">
-          <div class="copy">µã»÷Ìæ»»²»Í¬²ÄÖÊ</div>
+          <div class="copy">ç‚¹å‡»æ›¿æ¢ä¸åŒæè´¨</div>
         </div>
       </div>
 
       <div class="instructions move" data-ref="move_instructions">
         <div class="inner">
           <div class="tap"></div>
-          <div class="copy">µã»÷µØÃæ½øÐÐÒÆ¶¯</div>
+          <div class="copy">ç‚¹å‡»åœ°é¢è¿›è¡Œç§»åŠ¨</div>
         </div>
       </div>
     </div>
@@ -49,11 +49,11 @@
             <div class="main" data-ref="titlescreen_main">
               <div class="illustration" data-ref="titlescreen_illustration"></div>
               <div class="main-content">
-                <h1 class="title">ÐéÄâ¿Õ¼ä</h1>
-                <p class="copy">Ê¹ÓÃ<strong>WebGL</strong>¼¼Êõ´´ÔìÉíÁÙÆä¾³°ãµÄÐéÄâ¿Õ¼ä. <br/><br/></p>
+                <h1 class="title">è™šæ‹Ÿç©ºé—´</h1>
+                <p class="copy">ä½¿ç”¨<strong>WebGL</strong>æŠ€æœ¯åˆ›é€ èº«ä¸´å…¶å¢ƒèˆ¬çš„è™šæ‹Ÿç©ºé—´. <br/><br/></p>
                 <div class="warning"></div>
-                <div class="progress" data-ref="progress"><span class="text">¼ÓÔØÖÐ</span><span class="percentage">0</span>%</div>
-                <div class="start" data-ref="start">¿ªÊ¼ÓÎÀÀ</div>
+                <div class="progress" data-ref="progress"><span class="text">åŠ è½½ä¸­</span><span class="percentage">0</span>%</div>
+                <div class="start" data-ref="start">å¼€å§‹æ¸¸è§ˆ</div>
               </div>
             </div>
 
