--- a/littleworkshop.html
+++ b/littleworkshop.html
@@ -5,15 +5,15 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, minimal-ui=1">
 
-    <title>WebVR Showroom by Little Workshop</title>
+    <title>Webgl虚拟空间</title>
 
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="icon" href="img/favicon.png">
 
-    <meta property="og:title" content="WebVR Showroom">
-    <meta property="og:url" content="http://showroom.littleworkshop.fr">
-    <meta property="og:description" content="Step inside a virtual showroom built with WebGL and WebVR.">
-    <meta property="og:image" content="http://showroom.littleworkshop.fr/img/og-image.jpg">
+    <meta property="og:title" content="Webgl虚拟空间">
+    <meta property="og:url" content="https://foxhuntd.github.io">
+    <meta property="og:description" content="使用webgl技术创造身临其境般的虚拟空间">
+    <meta property="og:image" content="https://foxhuntd.github.io/img/og-image.jpg">
 
   </head>
   <body>
