--- a/sggis/sggistest.html
+++ b/sggis/sggistest.html
@@ -313,7 +313,7 @@
 	}
 	
 	var serverAddr = "http://10.157.177.8:7011/sggis/services";
-	serverAddr = "http://127.0.0.1:8080";
+	serverAddr = "https://foxhuntd.github.io/sggis";
 
 	var userName = "KSH@KSH";
 	var password = "ksh_1206";
