--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
         <div id="name">Tang<span id="dot">.</span>Shengchao</div>
 
         <div id="projects">
-
-
+            <div class="project">
+                <div><a href="styleTransfer.png"><img src="img/svgf.png" /></a></div>
+                <div class='title'><a href="img/svgf.png">Realtime GI Denoise</a></div>
+            </div>
             <div class="project">
                 <div><a href="https://foxhuntd.github.io/simulation/simulation.html"><img src="bunny.gif"/></a></div>
                 <div class='title'><a href="https://foxhuntd.github.io/simulation/simulation.html">Volumetric Fluid Simulation</a></div>
