--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <div id="projects">
             <div class="project">
-                <div><a href="styleTransfer.png"><img src="img/svgf.png" /></a></div>
+                <div><a href="img/svgf.png"><img src="img/svgf.png" /></a></div>
                 <div class='title'><a href="img/svgf.png">Realtime GI Denoise</a></div>
             </div>
             <div class="project">
