--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
         <div id="projects">
             <div class="project">
-                <div><a href="img/svgf.png"><img src="img/svgf.png" /></a></div>
-                <div class='title'><a href="img/svgf.png">Realtime GI Denoise</a></div>
+                <div><a href="img/svgf2.png"><img src="img/svgf2.png" /></a></div>
+                <div class='title'><a href="img/svgf2.png">Realtime GI Denoise</a></div>
             </div>
             <div class="project">
                 <div><a href="https://foxhuntd.github.io/simulation/simulation.html"><img src="bunny.gif"/></a></div>
